--- a/starter-code/src/app/app.component.html
+++ b/starter-code/src/app/app.component.html
@@ -1,3 +1,15 @@
-<h1>
-  {{title}}
-</h1>
+<header id="site-header" >
+  <div class="container">
+    <nav>
+      <a [routerLink]="['/home']">Home</a>
+      <a [routerLink]="['/movie/:id']">Movie</a>
+    </nav>
+  </div>
+</header>
+
+<div id="site-main" class="container">
+  <router-outlet></router-outlet>
+
+</div>
+
+<footer id="site-footer">@Ironhack</footer>
